--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT =5000
-const mongoURI = mongodb://amarjeetanand0987:Amar123@ac-nlwx554-shard-00-00.cvuzm0i.mongodb.net:27017,ac-nlwx554-shard-00-01.cvuzm0i.mongodb.net:27017,ac-nlwx554-shard-00-02.cvuzm0i.mongodb.net:27017/?replicaSet=atlas-4a34fr-shard-0&ssl=true&authSource=admin&retryWrites=true&w=majority&appName=URLcluster
+MONGO_URI = mongodb://amarjeetanand0987:Amar123@ac-nlwx554-shard-00-00.cvuzm0i.mongodb.net:27017,ac-nlwx554-shard-00-01.cvuzm0i.mongodb.net:27017,ac-nlwx554-shard-00-02.cvuzm0i.mongodb.net:27017/?replicaSet=atlas-4a34fr-shard-0&ssl=true&authSource=admin&retryWrites=true&w=majority&appName=URLcluster
